@startuml

!include ./_commons.style

package uutf {

  class Assertions {
    + {static} assertTrue(bool)
    + {static} assertFalse(bool)
    + {static} assertEquals(int, int)
  }

  abstract class Test {
    + run()
    __
    + {abstract} run(ResultCollector)
  }

  abstract class TestCase {
    - String methodName
    __
    + initialize(String): TestCase
    __
    + run(ResultCollector)
    - invokeTestMethod()
    __
    # setUp()
    # tearDown()
  }

  abstract class SingleTestCase {
    - {static} String DEFAULT_TEST_METHOD = "test"
    __
    + this()
    __
    + {abstract} test()
  }

  TestCase <|- SingleTestCase


  class TestSuite {
    + run(ResultCollector)
    __
    + addTest(Test)
  }

  TestSuite *-> "1..n\ncases" Test

  class TestRunner {
    + run(Test)
  }

  TestRunner .. Test

  Test <|-- TestCase
  Test <|-- TestSuite

  class ResultCollector {
    + addResult(TestResult)
    + toString()
  }

  ResultCollector *-> "1..n\nresults" TestResult

  Assertions .[hidden]. ResultCollector

  enum STATUS {
    PASSED
    FAILED
    ERRORED
    __
    - char symbol
    __
    - this(char)
    __
    + toString(): String
  }

  class TestResult {
    - String name
    + STATUS
    __
    + this(String)
    __
    + setStatus(STATUS)
    + getStatus(): STATUS
    __
    + toString(): String
  }

TestResult .. STATUS
TestRunner .. ResultCollector

}

package java.lang {
  class AssertionError
}

AssertionError .. Assertions





@enduml
